@@ -1,3 +1,8 @@
+Wed Nov 21 12:29:30 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/algos2d/SmoothNodes2D.java: New algorithm to
+	smooth nodes in parameterized space.
+
 Tue Nov 20 11:32:34 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/cad/CADGeomSurface.java
